fixed spacing on about page (which worked for SSR but NOT SSG)

--- a/assets/global.css
+++ b/assets/global.css
@@ -7,8 +7,3 @@
 a {
   text-decoration-color: white;
 }
-
-/* this is gross, no idea why parsed .md doesn't generate with classes so I can style it easier */
-[data-content-id="content:about.md"] p {
-  margin-bottom: 2rem;
-}
